# rust-gpt

./: .gitignore  Cargo.toml  README.md  gpt.py  main.py  pyproject.toml  tokenizer.py
docs/: attention.md
python/rustgpt/: __init__.py  tokenizer.py  train.py
rustgpt/: __init__.py  data.py  model.py  tokenizer.py  train.py
scripts/: benchmark.py  download_corpus.py  download_corpus_hf.py
src/: lib.rs
tests/: test_tokenizer.py
tokenizer-rs/: Cargo.toml  README.md  pyproject.toml
tokenizer-rs/src/: lib.rs
