[package]
name = "rustgpt"
version = "0.1.0"
edition = "2021"
description = "Ultra-fast byte-pair-encoding tokenizer (Rust core, Python bindings)"

[lib]
name = "_bpe"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
fancy-regex = "0.14"   # needed for the GPT-2 pattern's lookahead `(?!\S)`
rayon = "1"            # parallel batch encoding
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
