[project]
name = "rustgpt"
version = "0.1.0"
description = "A GPT trained from scratch on Rust source code, with a from-scratch BPE tokenizer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "regex>=2026.5.9",
    "requests>=2.34.2",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "bpe-rs",                # optional Rust accelerator for the tokenizer (workspace member)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rustgpt"]

[tool.uv.workspace]
members = ["tokenizer-rs"]

[tool.uv.sources]
bpe-rs = { workspace = true }

[dependency-groups]
dev = [
    "maturin>=1.14.1",
    "pytest>=8",
]
